# FamaLamaJam

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/debug/: 2026-03-20-ogg-vorbis-receive-decode-notes.md  2026-03-20-remote-interval-misalignment.md  2026-03-26-receive-diagnostics-field-reference.md  2026-03-26-remote-source-presence-vs-audio-dropouts.md  2026-04-06-fixed-bus-receive-timing-regression.md
.planning/debug/resolved/: 2026-03-21-multi-user-ui-glitch-and-crash.md
.planning/phases/01-plugin-foundation-session-configuration/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-connection-lifecycle-recovery/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-server-authoritative-timing-sync/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VALIDATION.md
.planning/phases/04-audio-streaming-mix-monitoring-core/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-ableton-reliability-v1-rehearsal-ux-validation/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-CONTEXT.md  05-REHEARSAL-CHECKLIST.md  05-RESEARCH.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-ableton-sync-assist-research-prototype/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md  06-VALIDATION.md  06-VERIFICATION.md
.planning/phases/07-chat-room-control-commands/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-CONTEXT.md  07-RESEARCH.md  07-VALIDATION.md  07-VERIFICATION.md
.planning/phases/08-server-discovery-history/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  08-CONTEXT.md  08-RESEARCH.md  08-VALIDATION.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
cmake/: dependencies.cmake
docs/ui-iterations/: INDEX.md  README.md  TEMPLATE.md  UI-000-strategy-pivot.md  UI-001-expanded-server-settings-layout.md  UI-002-strip-pan-column-and-full-height.md  UI-003-local-channel-add-remove-refresh.md  UI-004-integrated-meter-gain-and-reset.md  UI-005-denser-strip-controls-and-shorter-meter.md  UI-006-boxed-strip-button-states.md  UI-007-horizontal-mixer-scroll-on-overflow.md  UI-008-group-borders-around-local-and-remote-users.md  UI-009-local-collapse-chevron-tab.md  UI-010-local-add-remove-button-clarity.md  UI-011-remove-strip-subtitle-line.md  UI-012-single-channel-remote-header-priority.md  UI-013-local-header-title-shortening.md  UI-014-strip-status-text-audit-and-shortening.md  UI-015-strip-status-tooltips-with-full-wording.md  UI-016-remote-output-selector-width-and-labels.md  UI-017-footer-full-width-and-metronome-knob.md  UI-018-top-align-room-sidebar-with-expanded-settings.md  UI-019-normal-compact-size-selector.md  UI-020-footer-metronome-slider-symmetry.md  UI-021-master-and-pan-double-click-resets.md
docs/validation/: phase1-ableton-matrix.md  phase2-ableton-lifecycle-matrix.md  phase6-ableton-sync-matrix.md  phase7-room-chat-controls-matrix.md  phase8-server-discovery-matrix.md  phase8.1-server-discovery-polish-matrix.md  phase8.2-pre-layout-hardening-matrix.md  phase8.3-functional-release-controls-matrix.md  phase8.3.1-private-server-ui-polish-matrix.md  phase8.3.2-voice-mode-matrix.md  phase8.3.3-stem-capture-matrix.md  phase8.3.4-host-multi-io-routing-matrix.md  phase8.3.4.1-fixed-bus-routing-matrix.md  phase8.3.4.2-expanded-fixed-bus-routing-matrix.md  phase9-jamtaba-inspired-layout-and-mixer-parity.md  phase9.1-strip-only-mixer-rebuild-on-stable-layout.md
src/audio/: AudioBufferResampler.cpp  AudioBufferResampler.h  CodecStreamBridge.cpp  CodecStreamBridge.h  OggVorbisCodec.cpp  OggVorbisCodec.h  StemCaptureWriter.cpp  StemCaptureWriter.h
src/net/: FramedSocketTransport.cpp  FramedSocketTransport.h
src/plugin/: FamaLamaJamAudioProcessor.cpp  FamaLamaJamAudioProcessor.h  FamaLamaJamAudioProcessorEditor.cpp  FamaLamaJamAudioProcessorEditor.h
tests/: CMakeLists.txt
tests/integration/: plugin_apply_flow_tests.cpp  plugin_codec_runtime_tests.cpp  plugin_connection_command_flow_tests.cpp  plugin_connection_error_recovery_tests.cpp  plugin_connection_recovery_tests.cpp  plugin_experimental_transport_tests.cpp  plugin_host_lifecycle_tests.cpp  plugin_host_multi_io_routing_tests.cpp  plugin_host_sync_assist_tests.cpp  plugin_mixer_controls_tests.cpp  plugin_mixer_ui_tests.cpp  plugin_pre_layout_cpu_diagnostics_tests.cpp  plugin_rehearsal_ui_flow_tests.cpp  plugin_remote_interval_alignment_tests.cpp  plugin_room_chat_tests.cpp  plugin_room_controls_ui_tests.cpp  plugin_server_discovery_tests.cpp  plugin_server_discovery_ui_tests.cpp  plugin_server_timing_sync_tests.cpp  plugin_state_roundtrip_tests.cpp  plugin_stem_capture_tests.cpp  plugin_streaming_runtime_compat_tests.cpp  plugin_transmit_controls_tests.cpp  plugin_transmit_controls_ui_tests.cpp  plugin_transport_ui_sync_tests.cpp  plugin_voice_mode_guard_tests.cpp  plugin_voice_mode_toggle_tests.cpp  plugin_voice_mode_transport_tests.cpp
tests/integration/support/: FakeServerDiscoveryClient.h  MiniNinjamServer.h
tests/unit/: audio_buffer_resampler_tests.cpp  codec_stream_bridge_tests.cpp  connection_failure_classification_tests.cpp  connection_lifecycle_tests.cpp  ogg_vorbis_codec_tests.cpp  remembered_server_store_tests.cpp  retry_policy_tests.cpp  server_discovery_parser_tests.cpp  settings_validation_tests.cpp  state_serialization_tests.cpp  stem_capture_writer_tests.cpp
(+142 files in other folders)
